--- a/main/templates/staff/staff_session_parameters.html
+++ b/main/templates/staff/staff_session_parameters.html
@@ -58,22 +58,22 @@
 
 <!-- cards -->
 <div class="row justify-content-lg-center mb-4" v-cloak>
-    <div class="col-md">
+    <div class="col-lg">
         {%include "staff/staff_session_parameters/general_settings/general_settings_card.html"%}  
     </div>
-    <div class="col">   
+    <div class="col-lg">   
         {%include "staff/staff_session_parameters/players/players_card.html"%}                  
     </div>          
-    <div class="col-md">
+    <div class="col-lg">
         {%include "staff/staff_session_parameters/zone_minutes/zone_minutes_card.html"%}  
     </div> 
-    <div class="col-md">
+    <div class="col-lg">
         {%include "staff/staff_session_parameters/control/control_card.html"%}  
     </div>        
 </div>
 
 <div class="row justify-content-lg-center" v-cloak>
-    <div class="col">
+    <div class="col-lg">
         {%include "staff/staff_session_parameters/periods/periods_card.html"%}  
     </div>
 </div>
