--- a/main/templates/staff/staff_session.html
+++ b/main/templates/staff/staff_session.html
@@ -80,45 +80,45 @@
 <!-- cards -->
 
 <div class="row justify-content-lg-center mt-4" v-cloak v-if="session">
-    <div class="col-md-9">
+    <div class="col-lg-9">
         <div class="row">
-            <div class="col mb-2">
+            <div class="col-md mb-2">
                 {%include "staff/staff_session/subjects/subjects_card.html"%} 
             </div>               
         </div>       
         <div class="row">
-            <div class="col">
+            <div class="col-md">
                {%include "staff/staff_session/graph/graph_card.html"%} 
             </div>            
         </div>   
     </div>
-    <div class="col-md-3">
+    <div class="col-lg-3">
         <div class="row">
-            <div class="col">
+            <div class="col-md">
                 {%include "staff/staff_session/session/session_card.html"%}
             </div>
         </div>
 
         <div class="row mt-2">
-            <div class="col">
+            <div class="col-md">
                 {%include "staff/staff_session/control/control_card.html"%} 
             </div>
         </div>
         
         <div class="row mt-2">
-            <div class="col">
+            <div class="col-md">
                 {%include "staff/staff_session/summary/summary_card.html"%}
             </div>                
         </div>
 
         <div class="row mt-2" v-show="session.started">
-            <div class="col">
+            <div class="col-md">
                 {%include "staff/staff_session/payments/payments_card.html"%}
             </div>                
         </div>
 
         <div class="row mt-2">
-            <div class="col">
+            <div class="col-md">
                 {%include "staff/staff_session/data/data_card.html"%}
             </div>                
         </div>
