add auto login links back. fixes #77.

--- a/main/templates/staff/staff_session/subjects/subjects_card.html
+++ b/main/templates/staff/staff_session/subjects/subjects_card.html
@@ -143,5 +143,27 @@
             </div>
         </div>  
         
+        <!-- private links -->
+        <div class="row justify-content-center">            
+            <div class="col-md-auto text-center">
+                Private Login Links (do not share with subjects)
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-auto text-center">
+                Next available connection:
+            </div>
+            <div class="col-md-auto text-center">
+                <a href='{%url "subject_home_auto_connect" session.session_key%}' class = 'link-primary'>{{parameters.site_url}}{%url "subject_home_auto_connect" session.session_key%}</a>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-auto text-center">
+                Login by client number:
+            </div>
+            <div class="col-md-auto text-center">
+                <a href='{%url "subject_home_auto_connect" session.session_key%}[client_number]' class = 'link-primary'>{{parameters.site_url}}{%url "subject_home_auto_connect" session.session_key%}[client_number]</a>
+            </div>
+        </div>
     </div>                    
 </div> 
