--- a/main/templates/staff/staff_session/subjects/view_subject_chat_modal.html
+++ b/main/templates/staff/staff_session/subjects/view_subject_chat_modal.html
@@ -22,7 +22,7 @@
                             [[c.text]]
                         </div>
                         <div v-else class="pe-5 ps-2" v-bind:id="'chat_id_' + c.id">
-                            <span class="fw-bold">Partner:</span> [[c.text]]
+                            <span class="fw-bold" v-bind:style="{'color':c.sender_color}">[[c.sender_label]]:</span> [[c.text]]
                         </div>
                     </div>
                 </div>            
