--- a/main/templates/staff/staff_session_parameters/periods/periods_card.html
+++ b/main/templates/staff/staff_session_parameters/periods/periods_card.html
@@ -64,11 +64,11 @@
                                 </td>
                                 <td v-on:click="showEditParametersetPeriod(index)" class="player_table_cell text-nowrap">
                                     <span v-if="p.survey_required==1">Yes</span>
-                                    <span v-else>No</span>
+                                    <span v-else></span>
                                 </td>
                                 <td v-on:click="showEditParametersetPeriod(index)" class="player_table_cell text-nowrap">
                                     <span v-if="p.show_notice==1">Yes</span>
-                                    <span v-else>No</span>
+                                    <span v-else></span>
                                 </td> 
                                 <td v-on:click="showEditParametersetPeriod(index)" class="player_table_cell text-nowrap">
                                     <span v-if="p.show_graph_1==1">Yes</span>
@@ -78,7 +78,7 @@
 
                                 </td>
                                 <td v-on:click="showEditParametersetPeriod(index)" class="player_table_cell text-nowrap">
-                                    [[p.graph_1_start_period_number]] to [[p.graph_1_end_period_number]] and 
+                                    <span v-if="p.show_graph_1==1">[[p.graph_1_start_period_number]] to [[p.graph_1_end_period_number]]</span><span v-else>---</span> and 
                                     [[p.graph_2_start_period_number]] to [[p.graph_2_end_period_number]]
                                 </td> 
                                 <td v-on:click="showEditParametersetPeriod(index)" class="player_table_cell text-nowrap">
