Add no pay percent to data and history on staff.

--- a/main/templates/staff/staff_session/subjects/view_subject_modal.html
+++ b/main/templates/staff/staff_session/subjects/view_subject_modal.html
@@ -32,6 +32,9 @@
                                 Earnings Group
                             </th>
                             <th scope="col" class = "text-center m-1 p-1 w-auto">
+                                No Pay %
+                            </th>
+                            <th scope="col" class = "text-center m-1 p-1 w-auto">
                                 Zone Minutes
                             </th>
                             <th scope="col" class = "text-center m-1 p-1 w-auto">
@@ -74,6 +77,9 @@
                             </td>
                             <td class="player_table_cell text-center text-nowrap w-auto">
                                 $[[p.earnings_group]]
+                            </td>
+                            <td class="player_table_cell text-center text-nowrap w-auto">
+                                [[p.earnings_no_pay_percent]]%
                             </td>
                             <td class="player_table_cell text-center text-nowrap w-auto">
                                 [[p.zone_minutes]]
