--- a/main/templates/staff/staff_session/subjects/subjects_card.html
+++ b/main/templates/staff/staff_session/subjects/subjects_card.html
@@ -40,13 +40,7 @@
                                 </th>
                                 <th scope="col" class = "m-1 p-1">
                                     Name
-                                </th>
-                                <th scope="col" class = "m-1 p-1">
-                                    Email
-                                </th>
-                                <th scope="col" class = "text-center m-1 p-1">
-                                    Student ID
-                                </th>
+                                </th>                                
                                 <th scope="col" class = "text-center m-1 p-1">
                                     Group Number
                                 </th>
@@ -64,6 +58,9 @@
                                 </th> 
                                 <th scope="col" class = "text-center m-1 p-1">
                                     Connected
+                                </th>
+                                <th scope="col" class = "text-center m-1 p-1">
+                                    Last Sync
                                 </th>
                                 <th scope="col" class = "text-center m-1 p-1">
                                     History
@@ -86,13 +83,7 @@
                                 </td>
                                 <td class="player_table_cell text-nowrap" v-on:click="showEditSubject(p.id)">
                                     [[p.name=="" ? "---" : p.name]]
-                                </td>
-                                <td class="player_table_cell text-nowrap" v-on:click="showEditSubject(p.id)">
-                                    [[(!p.email || p.email=="") ? "---" : p.email]]
-                                </td>
-                                <td class="player_table_cell text-nowrap" v-on:click="showEditSubject(p.id)">
-                                    [[p.student_id=="" ? "---" : p.student_id]]
-                                </td>
+                                </td>                                
                                 <td class="player_table_cell text-nowrap" v-on:click="showEditSubject(p.id)">
                                     [[p.group_number]]
                                 </td>
@@ -125,6 +116,9 @@
                                     <span v-else style="color: crimson;">
                                         <i class="fas fa-times"></i>
                                     </span>
+                                </td>
+                                <td class="player_table_cell text-nowrap" >
+                                    [[p.fitbit_last_synced]]
                                 </td>
                                 <td class="player_table_cell text-nowrap" v-on:click="showViewSubject(index, p.id)">
                                     <i class="fas fa-history"></i>
