move modal mounts to after sesison load.

--- a/main/templates/staff/staff_session_parameters/control/import_parameters_modal.html
+++ b/main/templates/staff/staff_session_parameters/control/import_parameters_modal.html
@@ -1,6 +1,6 @@
 {% load crispy_forms_tags %}
 <!--import parameters from another session modal -->
-<div class="modal fade" id="importParametersModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="editSessionModalLabel" aria-hidden="true">
+<div class="modal fade" id="importParametersModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="importParametersModalLabel" aria-hidden="true">
 <div class="modal-dialog">
     <div class="modal-content">
     <div class="modal-header">
