--- a/main/templates/staff/staff_session_parameters/control/upload_parameters_modal.html
+++ b/main/templates/staff/staff_session_parameters/control/upload_parameters_modal.html
@@ -1,5 +1,5 @@
 {% load crispy_forms_tags %}
-<div class="modal fade" id="parameterSetModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="editSessionModalLabel" aria-hidden="true">
+<div class="modal fade" id="parameterSetModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="parameterSetModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
