--- a/main/templates/staff/staff_session/control/control_card.html
+++ b/main/templates/staff/staff_session/control/control_card.html
@@ -3,6 +3,8 @@
         <span class="align-middle">Control</span>       
             
         <span class="float-end">
+            <span v-if="control_working"><i class="fas fa-spinner fa-spin"></i></span>
+
             <button type="button" class="btn btn-link ms-4" title="Show Help Doc" v-on:click="sendLoadHelpDoc('Staff Control')">
                 <i class="far fa-question-circle"></i> 
             </button>
