--- a/main/templates/staff/staff_session_parameters/periods/edit_parameterset_periods_modal.html
+++ b/main/templates/staff/staff_session_parameters/periods/edit_parameterset_periods_modal.html
@@ -18,7 +18,7 @@
                     {% endfor %}
                 </form>
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer" v-if="session">
                 
                 <button type="button"
                         class="btn btn-outline-primary"
