--- a/main/templates/staff/staff_session_parameters/periods/edit_parameterset_period_payment_modal.html
+++ b/main/templates/staff/staff_session_parameters/periods/edit_parameterset_period_payment_modal.html
@@ -1,6 +1,6 @@
 {% load crispy_forms_tags %}
 <!--Edit Period Modal -->
-<div class="modal fade" id="editParametersetPeriodPaymentModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="editParametersetModal" aria-hidden="true">
+<div class="modal fade" id="editParametersetPeriodPaymentModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="editParametersetPeriodPaymentModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
