auto assign groups based on paramters set. fixes #100.

--- a/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
+++ b/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
@@ -22,6 +22,14 @@
         </div>
         <div class="row">
             <div class="col-7 text-end">
+                {{parameter_set_form.group_size.label}}:
+            </div>
+            <div class="col text-start">
+                [[session.parameter_set.group_size]]
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-7 text-end">
                 {{parameter_set_form.enable_chat.label}}:                
             </div>
             <div class="col text-start">
