remove jquery on ready. update login screen prevent submit.

--- a/main/templates/staff/staff_session.html
+++ b/main/templates/staff/staff_session.html
@@ -5,7 +5,7 @@
 
 <script type="text/javascript">
 
-    $(document).ready(function(){
+    document.addEventListener("DOMContentLoaded", function(){
         {%include "staff/staff_session/staff_session.js"%}
 
         tinyMCE.init({
