--- a/main/templates/staff/staff_home.html
+++ b/main/templates/staff/staff_home.html
@@ -4,7 +4,7 @@
 {%block head%}
 <script type="text/javascript">
 
-    $(document).ready(function(){
+    document.addEventListener("DOMContentLoaded", function(){
         {%include "staff/staff_home/staff_home.js"%}
     });
 
