--- a/main/templates/subject/subject_home.html
+++ b/main/templates/subject/subject_home.html
@@ -4,7 +4,7 @@
 {%block head%}
 <script type="text/javascript">
 
-    $(document).ready(function(){
+    document.addEventListener("DOMContentLoaded", function(){
         {%include "subject/subject_home/subject_home.js"%}
     });
 
