--- a/main/templates/subject/survey_complete.html
+++ b/main/templates/subject/survey_complete.html
@@ -4,7 +4,7 @@
 {%block head%}
 <script type="text/javascript">
 
-    $(document).ready(function(){
+    document.addEventListener("DOMContentLoaded", function(){
         {%include "subject/survey_complete/survey_complete.js"%}
     });
 
