--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -65,7 +65,7 @@
                   <span v-html ="loginButtonText"></span>
                 </button> 
 
-                <span class="ps-4" style="color: red;" v-html="loginErrorText">
+                <span class="ps-4 text-danger" v-html="loginErrorText">
                 </span>
             </div>
         </div>
