add subject help docs to paramters.

--- a/main/templates/subject/subject_home/graph/graph_card.html
+++ b/main/templates/subject/subject_home/graph/graph_card.html
@@ -6,7 +6,7 @@
         </span>        
 
         <span class="float-end">           
-            <button type="button" class="btn btn-link ms-2" title="Show Help Doc" v-on:click="sendLoadHelpDocSubject('{{subject_graph_help_doc}}')">
+            <button type="button" class="btn btn-link ms-2" title="Show Help Doc" v-on:click="sendLoadHelpDocSubject('Graph Help')">
                 <i class="far fa-question-circle"></i> 
             </button>
         </span>
