--- a/main/templates/subject/subject_home/chat/chat_card.html
+++ b/main/templates/subject/subject_home/chat/chat_card.html
@@ -4,7 +4,7 @@
         <span class="align-middle">Chat</span>         
         
         <span class = "float-end">
-            <button type="button" class="btn btn-link ms-4" title="Show Help Doc" v-on:click="sendLoadHelpDocSubject('Chat Help')">
+            <button type="button" class="btn btn-link ms-4" title="Show Help Doc" v-on:click="sendLoadHelpDocSubject('Subject chat help')">
                 <i class="far fa-question-circle"></i> 
             </button>
         </span>
