--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -98,7 +98,7 @@
         </div>       
         <div class="row text-end fw-bold" v-if="session_player.survey_link != ''">            
             <div class="col mt-2">              
-                Complete the survey before check in: <a v-bind:href="session_player.survey_link" target="_blank">Open Survey</a>
+                Complete the survey before check in: <a v-bind:href="session_player.survey_link">Open Survey</a>
             </div>                                 
         </div>
         <div class="row text-end" v-else>            
