update activity pull.

--- a/main/templates/staff/staff_session/subjects/subjects_card.html
+++ b/main/templates/staff/staff_session/subjects/subjects_card.html
@@ -24,7 +24,7 @@
                     v-on:click="senddPullTimeSeriesData()" 
                     v-bind:disabled="working"
                     v-show="session.started">
-                Pull Time Series Data <span v-if="time_series_pulled"><i class="fas fa-check"></i></span>
+                Pull Activity Data <span v-if="time_series_pulled"><i class="fas fa-check"></i></span>
             </button>
 
             <button type="button" 
